--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-parent</artifactId>
-    <version>2.7</version>
+    <version>2.8-rc1-SNAPSHOT</version>
   </parent>
   <groupId>com.fasterxml.jackson.dataformat</groupId>
   <artifactId>jackson-dataformat-spade</artifactId>
   <name>Jackson dataformat: spade</name>
-  <version>2.7.0-SNAPSHOT</version>
+  <version>2.8.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <description>Support for reading and writing data encoded in Spade format
   </description>
@@ -22,7 +22,7 @@
   </scm>
 
   <properties>
-    <jackson.version.core>2.7.3</jackson.version.core>
+    <jackson.version.core>2.8.0-SNAPSHOT</jackson.version.core>
 
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>com/fasterxml/jackson/dataformat/spade</packageVersion.dir>
