Add first version of full-block compressor

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 
      <!-- and for testing -->
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
       <scope>test</scope>
