--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,14 @@
       <version>${jackson.version.core}</version>
     </dependency>
 
-     <!-- and for testing -->
+    <!-- for perf/efficiency comparisons, check out Roaring -->
+    <dependency>
+      <groupId>org.roaringbitmap</groupId>
+      <artifactId>RoaringBitmap</artifactId>
+      <version>0.6.14</version>
+    </dependency>
+
+    <!-- and for testing -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
