--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
       <artifactId>RoaringBitmap</artifactId>
       <version>0.6.14</version>
     </dependency>
+    <dependency>
+      <groupId>com.ning</groupId>
+      <artifactId>compress-lzf</artifactId>
+      <version>1.0.3</version>
+    </dependency>
 
     <!-- and for testing -->
     <dependency>
