--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.fasterxml.jackson</groupId>
     <artifactId>jackson-parent</artifactId>
-    <version>2.8-rc1-SNAPSHOT</version>
+    <version>2.8</version>
   </parent>
   <groupId>com.fasterxml.jackson.dataformat</groupId>
   <artifactId>jackson-dataformat-spade</artifactId>
@@ -22,7 +22,7 @@
   </scm>
 
   <properties>
-    <jackson.version.core>2.8.0-SNAPSHOT</jackson.version.core>
+    <jackson.version.core>2.8.5</jackson.version.core>
 
     <!-- Generate PackageVersion.java into this directory. -->
     <packageVersion.dir>com/fasterxml/jackson/dataformat/spade</packageVersion.dir>
